# IK

./: README.md  TODO.txt  maxheap.py
adhoc/: adhoc.txt  array_product.py  array_product_binpow_test2.py  array_search_editorial.py  array_search_salad2.py  array_search_salad3.py  array_search_salad4.py  histogram_area_optim1_try_WP.py  histogram_area_optim2.py  histogram_area_optim2_WIP.py  histogram_area_optim2_repl.py  histogram_area_optim2_repl_good.py  histogram_area_semi_optimal_WIP1.py  histogram_area_sparse_array.py  zerosum.py
adhoc2/: alternating_items_debug1.py  alternating_items_wip3_debug.py  alternating_items_wip3_submission.py  hamming_weights.py  next_palindrome_debug1.py  next_palindrome_submission1.py  next_palindrome_wip2_submission.py  next_palindrome_wip3_debug.py  next_palindrome_wip3_submission.py  next_palindrome_wip4_submission.py  next_palindrome_wip5_submission.py  next_palindrome_wip_debug.py  next_palindrome_wip_submission.py  skyline_priorityq_wip2_submission.py  skyline_priorityq_wip3_debug.py  skyline_priorityq_wip3_submission.py  skyline_priorityq_wip4_debug.py  skyline_priorityq_wip4_submission.py  skyline_priorityq_wip_submission.py  skyline_sparse_array_cyclomatic_explosion1_debug.py  skyline_wip_debug.py  sorted_ring_min_tech.py  sorted_ring_min_tech_wip1.py  sorted_ring_min_wip1.py
adhoc_test/: constrained_division_wip1_debug.py  (+6 more)
agentic/: Build a HealthCare Vertical AI Agents.ipynb  Hospital_General_Information.csv  OpenAI_Hello_World.ipynb  README.md  appointments.db  doctors_slots_data.csv  pyproject.toml
practice3/: lca.py  (+8 more)
(+235 files in other folders)
