[project]
name = "agentic"
version = "0.1.0"
description = ""
authors = [
    {name = "MrCsabaToth",email = "csaba.toth.us@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "openai (>=1.72.0,<2.0.0)",
    "httpx (>=0.27.0,<0.28.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-openai (>=0.3.12,<0.4.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "crewai (>=0.114.0,<0.115.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "tabulate (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "agentic"
package-mode = false
packages = [
]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

